Update patient profile name in the create consent view dynamically. Remove unnecessary code and add notification in profile service in case profile is not available.
#8014 - As a patient, I can view my profile information which is generated dynamically

--- a/client/app/consent/directives/consentCreateEdit.html
+++ b/client/app/consent/directives/consentCreateEdit.html
@@ -1,7 +1,7 @@
 <form name="consentForm">
     <div class="row">
         <div class="col-md-10">
-            <h1> I, Bob, hereby authorize... </h1>
+            <h1> I, <span ng-bind="consentCreateVm.username"></span>, hereby authorize... </h1>
             <div class="hr-line-dashed"></div>
             <div class="row">
                     <div class="col-md-5">
