--- a/client/app/security/directives/oauthLogin.html
+++ b/client/app/security/directives/oauthLogin.html
@@ -1,15 +1,23 @@
 <div>
-    <div class="form-group">
-        <label for="email">Username:</label>
-        <input type="text" class="form-control" id="email" ng-model="oauthLoginVm.user.email" name="email">
-    </div>
-    <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="text" class="form-control" id="password" ng-model="oauthLoginVm.user.password" name="password">
-    </div>
+    <fieldset>
+        <legend>Log in with your MHC account</legend>
 
-    <div class="form-group">
-        <button type="button" class="close" ng-click="oauthLoginVm.login()" >Login</button>
-    </div>
+        <div class="alert alert-danger" id="login-error" ng-if="oauthLoginVm.loginError">
+            <span ng-bind="oauthLoginVm.loginError"></span>
+        </div>
 
+        <div class="form-group">
+            <label for="email">Username:</label>
+            <input type="text" id="email" ng-model="oauthLoginVm.user.email" name="email">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="text" id="password" ng-model="oauthLoginVm.user.password" name="password">
+        </div>
+
+        <div class="form-group">
+            <button type="button" class="close" ng-click="oauthLoginVm.login()">Login</button>
+        </div>
+    </fieldset>
 </div>
