Edit html and styles for Login page
#8196 As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/security/directives/oauthLogout.html
+++ b/client/app/security/directives/oauthLogout.html
@@ -1,7 +1,6 @@
 <span>
     <a href="#" class="btn btn-default" ng-click="oauthLogoutVm.logout()">
-        <i class="fa fa-user"></i>
-        <span class="force-inline">Logout </span>
-        <span ng-bind="oauthLogoutVm.name"></span>
+        <i class="fa fa-sign-out"></i>
+        <span class="force-inline">Logout</span>
     </a>
 </span>
