--- a/client/app/security/directives/oauthLogin.html
+++ b/client/app/security/directives/oauthLogin.html
@@ -1,4 +1,4 @@
-<div>
+<form class="form-horizontal">
     <fieldset>
         <legend>Log in with your MHC account</legend>
 
@@ -7,17 +7,23 @@
         </div>
 
         <div class="form-group">
-            <label for="email">Username:</label>
-            <input type="text" id="email" ng-model="oauthLoginVm.user.email" name="email">
+            <label for="email" class="col-sm-2 control-label">Username:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="email" ng-model="oauthLoginVm.user.email" name="email">
+            </div>
         </div>
 
         <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="text" id="password" ng-model="oauthLoginVm.user.password" name="password">
+            <label for="password" class="col-sm-2 control-label">Password:</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" id="password" ng-model="oauthLoginVm.user.password" name="password">
+            </div>
         </div>
 
-        <div class="form-group">
-            <button type="button" class="close" ng-click="oauthLoginVm.login()">Login</button>
+        <div class="form-group m-t-lg text-center">
+            <div class="col-sm-offset-3 col-sm-6">
+                <button type="button" class="btn btn-block btn-primary dark-green" ng-click="oauthLoginVm.login()">Login</button>
+            </div>
         </div>
     </fieldset>
-</div>
+</form>
