--- a/client/app/security/securityLogin.html
+++ b/client/app/security/securityLogin.html
@@ -16,18 +16,23 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="loginColumns animated fadeInDown custom-login-column modified">
-                        <div class="row">
-                            <div class="col-md-5">
+                        <div class="row m-b-xl">
+                            <div class="col-md-5 m-b-md">
                                 <h1 class="font-bold">Take control of your health and well-being with My Health Compass.</h1>
                             </div>
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
-                                    <h2 class="font-bold">Register Today!</h2>
-                                    <small> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</small>
-                                    <div class="m-t text-center">
+                                    <div class="alert alert-success">
+                                        <h2 class="font-bold">No Account? Register Today!</h2>
+                                        <small> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</small>
+                                    </div>
+                                    <div class="m-t">
                                         <pp-oauth-login></pp-oauth-login>
                                     </div>
-                                    <p class="m-t text-center"> Version: {{::loginVm.version}} </p>
+                                    <div class="text-center">
+                                        <a href="#"><small>Forget Password?</small></a>
+                                        <p> Version: {{::loginVm.version}} </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
