Edit error message, html and styles for Login page
#8196 As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/security/securityLogin.html
+++ b/client/app/security/securityLogin.html
@@ -22,17 +22,17 @@
                             </div>
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
-                                    <div class="alert alert-success">
-                                        <h2 class="font-bold">No Account? Register Today!</h2>
-                                        <small> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</small>
-                                    </div>
-                                    <div class="m-t">
+                                    <div class="m-t-sm">
                                         <pp-oauth-login></pp-oauth-login>
                                     </div>
                                     <div class="text-center">
                                         <a href="#"><small>Forget Password?</small></a>
                                         <p> Version: {{::loginVm.version}} </p>
                                     </div>
+                                </div>
+                                <div class="m-t alert alert-warning">
+                                    <h2 class="m-t-xs font-bold">No Account? Register Today!</h2>
+                                    <p> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</p>
                                 </div>
                             </div>
                         </div>
