--- a/client/app/security/directives/oauthLogin.html
+++ b/client/app/security/directives/oauthLogin.html
@@ -2,9 +2,9 @@
     <fieldset>
         <legend>Log in with your MHC account</legend>
 
-        <div class="alert alert-danger" id="login-error" ng-if="oauthLoginVm.loginError">
-            <span ng-bind="oauthLoginVm.loginError"></span>
-        </div>
+        <!--<div class="text-alert" id="login-error" ng-if="oauthLoginVm.loginError">-->
+            <!--<span ng-bind="oauthLoginVm.loginError"></span>-->
+        <!--</div>-->
 
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Username:</label>
@@ -20,7 +20,13 @@
             </div>
         </div>
 
-        <div class="form-group m-t-lg text-center">
+        <div class="row">
+            <div class="col-sm-offset-2 col-sm-10 text-alert m-t-n-xs" id="login-error" ng-if="oauthLoginVm.loginError">
+                <span ng-bind="oauthLoginVm.loginError"></span>
+            </div>
+        </div>
+
+        <div class="form-group m-t-md text-center">
             <div class="col-sm-offset-3 col-sm-6">
                 <button type="button" class="btn btn-block btn-primary dark-green" ng-click="oauthLoginVm.login()">Login</button>
             </div>
