--- a/client/app/security/directives/oauthLogin.html
+++ b/client/app/security/directives/oauthLogin.html
@@ -1,34 +1,36 @@
-<form class="form-horizontal">
+<form class="form-horizontal" name="loginForm">
     <fieldset>
         <legend>Log in with your MHC account</legend>
-
-        <!--<div class="text-alert" id="login-error" ng-if="oauthLoginVm.loginError">-->
-            <!--<span ng-bind="oauthLoginVm.loginError"></span>-->
-        <!--</div>-->
-
         <div class="form-group">
             <label for="email" class="col-sm-2 control-label">Username:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="email" ng-model="oauthLoginVm.user.email" name="email">
+                <input type="text" class="form-control" id="email" name="email" ng-model="oauthLoginVm.user.email"
+                       name="email" required>
+                <div ng-messages="loginForm.email.$error" ng-if="loginForm.email.$dirty" class="text-alert">
+                    <div ng-message="required">This field is required.</div>
+                </div>
             </div>
         </div>
-
         <div class="form-group">
             <label for="password" class="col-sm-2 control-label">Password:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="password" ng-model="oauthLoginVm.user.password" name="password">
+                <input type="password" class="form-control" id="password" name="password"
+                       ng-model="oauthLoginVm.user.password" name="password" required>
+                <div ng-messages="loginForm.password.$error" ng-if="loginForm.password.$dirty" class="text-alert">
+                    <div ng-message="required">This field is required.</div>
+                </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-sm-offset-2 col-sm-10 text-alert m-t-n-xs" id="login-error" ng-if="oauthLoginVm.loginError">
-                <span ng-bind="oauthLoginVm.loginError"></span>
+                <span>Wrong username or password</span>
             </div>
         </div>
-
-        <div class="form-group m-t-md text-center">
+        <div class="form-group m-t-lg text-center">
             <div class="col-sm-offset-3 col-sm-6">
-                <button type="button" class="btn btn-block btn-primary dark-green" ng-click="oauthLoginVm.login()">Login</button>
+                <button type="button" class="btn btn-block btn-primary dark-green" ng-click="oauthLoginVm.login()"
+                        ng-disabled="!oauthLoginVm.canSubmit(loginForm)">Login
+                </button>
             </div>
         </div>
     </fieldset>
