--- a/client/app/security/directives/oauthLogin.html
+++ b/client/app/security/directives/oauthLogin.html
@@ -6,8 +6,8 @@
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="email" name="email" ng-model="oauthLoginVm.user.email"
                        name="email" required>
-                <div ng-messages="loginForm.email.$error" ng-if="loginForm.email.$dirty" class="text-alert">
-                    <div ng-message="required">This field is required.</div>
+                <div ng-messages="loginForm.email.$error" ng-if="loginForm.email.$dirty" class="text-alert m-t-xs">
+                    <div ng-message="required"><small>A username is required to login, please try again.</small></div>
                 </div>
             </div>
         </div>
@@ -16,20 +16,20 @@
             <div class="col-sm-10">
                 <input type="password" class="form-control" id="password" name="password"
                        ng-model="oauthLoginVm.user.password" name="password" required>
-                <div ng-messages="loginForm.password.$error" ng-if="loginForm.password.$dirty" class="text-alert">
-                    <div ng-message="required">This field is required.</div>
+                <div ng-messages="loginForm.password.$error" ng-if="loginForm.password.$dirty" class="text-alert m-t-xs">
+                    <div ng-message="required"><small>A password is required to login, please try again.</small></div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-offset-2 col-sm-10 text-alert m-t-n-xs m-b-xs" id="login-error" ng-if="oauthLoginVm.loginError">
-                <span>Wrong username or password</span>
+                <span><small>Sorry, the user name and/or password entered does not match, please try again.</small></span>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-offset-2 col-sm-10 text-alert m-t-n-xs" id="profile-error"
                  ng-if="oauthLoginVm.profileError">
-                <span>No profile found</span>
+                <span><small>Whoops! We can't seem to find your account.</small></span>
             </div>
         </div>
         <div class="form-group m-t-lg text-center">
