Edit html and styles for text on Login page
#8196 As a patient, when I login to the MHC, the security protocols automatically authorize access to MHC apps

--- a/client/app/security/securityLogin.html
+++ b/client/app/security/securityLogin.html
@@ -18,7 +18,11 @@
                     <div class="loginColumns animated fadeInDown custom-login-column modified">
                         <div class="row m-b-xl">
                             <div class="col-md-5 m-b-md">
-                                <h1 class="font-bold">Take control of your health and well-being with My Health Compass.</h1>
+                                <h1 class="font-bold text-navbar-blue">Take control of your health and well-being with My Health Compass.</h1>
+                                <div class="m-t border-top-navbar-blue">
+                                    <h2 class="m-t-xs font-bold m-t text-navy-blue">No Account? Register Today!</h2>
+                                    <p> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</p>
+                                </div>
                             </div>
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
@@ -30,10 +34,10 @@
                                         <p> Version: {{::loginVm.version}} </p>
                                     </div>
                                 </div>
-                                <div class="m-t alert alert-warning">
-                                    <h2 class="m-t-xs font-bold">No Account? Register Today!</h2>
-                                    <p> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</p>
-                                </div>
+                                <!--<div class="m-t alert alert-warning">-->
+                                    <!--<h2 class="m-t-xs font-bold">No Account? Register Today!</h2>-->
+                                    <!--<p> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</p>-->
+                                <!--</div>-->
                             </div>
                         </div>
                     </div>
