Move Login feature from security module to account module
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -30,7 +30,8 @@
                 <div class="col-sm-offset-1 col-sm-10">
                     <h1> Create your Password</h1>
                     <div class="alert alert-info top-margin10">Please create a Password for your account.
-                        <strong>The email address you provided to begin this enrollment is your Username.</strong> Remember your Username
+                        <strong>The email address you provided to begin this enrollment is your Username.</strong>
+                        Remember your Username
                         and Password.
                         You will need them to log in to your account.
                     </div>
@@ -48,7 +49,8 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <input id="user_name" name="username" type="text" aria-required="true"
-                                               class="form-control bold" placeholder="sallysharemhc@gmail.com" readonly/>
+                                               class="form-control bold" placeholder="sallysharemhc@gmail.com"
+                                               readonly/>
                                     </div>
                                 </div>
                             </div>
@@ -61,7 +63,7 @@
                                                class="form-control"/>
                                         <p class="text-alert m-t-xs m-b-xxs">Password is required.</p>
                                         <p id="password_client_error_text" class="text-alert m-t-xs m-b-xxs"
-                                              style="display: none;">Password is required.</p>
+                                           style="display: none;">Password is required.</p>
                                     </div>
                                 </div>
                             </div>
@@ -85,12 +87,14 @@
 
                             <div class="form-group m-t-md">
                                 <div class="col-sm-12">
-                                <button type="button" class="btn btn-default m-r-sm" onClick="window.location.href='#'">
-                                    Clear
-                                </button>
-                                <button type="button" class="btn btn-primary dark-green" onClick="window.location.href='fe/activationSuccess'">
-                                    Submit
-                                </button>
+                                    <button type="button" class="btn btn-default m-r-sm"
+                                            onClick="window.location.href='#'">
+                                        Clear
+                                    </button>
+                                    <button type="button" class="btn btn-primary dark-green"
+                                            onClick="window.location.href='fe/activationSuccess'">
+                                        Submit
+                                    </button>
                                 </div>
                             </div>
                         </fieldset>
