--- a/client/app/account/controllers/activationSuccess.html
+++ b/client/app/account/controllers/activationSuccess.html
@@ -30,7 +30,8 @@
             <div class="col-sm-offset-1 col-sm-10">
                 <h1> Account Activation Complete!</h1>
                 <div class="">
-                    <strong>Congratulations!</strong> You have successfully created your MyHealthCompass password. Click on the link below to log in to your account.
+                    <strong>Congratulations!</strong> You have successfully created your MyHealthCompass password. Click
+                    on the link below to log in to your account.
                 </div>
             </div>
         </div>
