--- a/client/app/account/controllers/userAccountVerification.html
+++ b/client/app/account/controllers/userAccountVerification.html
@@ -1,6 +1,4 @@
 <div class="container-fluid page-bg-white">
-
-
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
         <div class="container-fluid">
             <div class="row ">
@@ -26,7 +24,6 @@
     </nav>
 
     <div class="padding-top-60">
-
         <section>
             <div class="row">
                 <div class="col-sm-offset-1 col-sm-10">
@@ -38,125 +35,7 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-sm-offset-1 col-sm-10">
-                    <form class="" id="signupForm" onsubmit="return validateSignupLinkToPatientForm()" method="post">
-                        <fieldset class="">
-                            <legend class="sr-only">Account Setup Verification</legend>
-                            <div class="form-group wrap">
-                                <label class="control-label">Date of Birth</label>
-
-                                <div class="row">
-                                    <div class="col-xs-6 col-sm-5 col-md-4 col-lg-3">
-                                        <label for="month" class="sr-only">Month</label>
-                                        <select id="month" class="form-control">
-                                            <option selected="selected" value="  ">Month</option>
-                                            <option value="01">January</option>
-                                            <option value="02">February</option>
-                                            <option value="03">March</option>
-                                            <option value="04">April</option>
-                                            <option value="05">May</option>
-                                            <option value="06">June</option>
-                                            <option value="07">July</option>
-                                            <option value="08">August</option>
-                                            <option value="09">September</option>
-                                            <option value="10">October</option>
-                                            <option value="11">November</option>
-                                            <option value="12">December</option>
-                                        </select>
-                                    </div>
-
-                                    <div class="col-xs-2 col-sm-2 col-md-1 side-padding0">
-                                        <label for="day" class="sr-only">Day</label>
-                                        <select id="day" class="form-control">
-                                            <option selected="selected" value="  ">Day</option>
-                                            <option value="01">01</option>
-                                            <option value="02">02</option>
-                                            <option value="03">03</option>
-                                            <option value="04">04</option>
-                                            <option value="05">05</option>
-                                            <option value="06">06</option>
-                                            <option value="07">07</option>
-                                            <option value="08">08</option>
-                                            <option value="09">09</option>
-                                            <option value="10">10</option>
-                                            <option value="11">11</option>
-                                            <option value="12">12</option>
-                                            <option value="13">13</option>
-                                            <option value="14">14</option>
-                                            <option value="15">15</option>
-                                            <option value="16">16</option>
-                                            <option value="17">17</option>
-                                            <option value="18">18</option>
-                                            <option value="19">19</option>
-                                            <option value="20">20</option>
-                                            <option value="21">21</option>
-                                            <option value="22">22</option>
-                                            <option value="23">23</option>
-                                            <option value="24">24</option>
-                                            <option value="25">25</option>
-                                            <option value="26">26</option>
-                                            <option value="27">27</option>
-                                            <option value="28">28</option>
-                                            <option value="29">29</option>
-                                            <option value="30">30</option>
-                                            <option value="31">31</option>
-                                        </select>
-                                    </div>
-
-                                    <div class="col-xs-4 col-sm-2">
-                                        <label for="year" class="sr-only">Year</label>
-                                        <select id="year" class="form-control">
-                                            <option selected="selected" value="    ">Year</option>
-                                        </select>
-                                    </div>
-
-                                    <div class="col-xs-12 m-t-sm">
-                                        <div ng-messages="createPatientForm.dateOfBirth.$error"
-                                             ng-if="createPatientForm.dateOfBirth.$dirty"
-                                             class="text-alert">
-                                            <div ng-messages-include="admin-messages"></div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-
-                            <div class="form-group wrap">
-                                <div>
-                                    <label for="verificationCode">Verification Code</label>
-                                    <span style="color: #808080; font-weight: 300;">(Verification Code is case sensitive)</span>
-
-                                    <div class="row">
-                                        <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
-                                            <input id="verificationCode" name="verificationCode" type="text"
-                                                   aria-required="true" class="form-control"/>
-                                            <!--<p class="text-alert m-t-xs">Verification code is wrong.</p>-->
-                                            <!--<p id="verificationCode_client_error_text" class="text-alert m-t-xs"-->
-                                            <!--style="display: none;">Verification code is required.</p>-->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-sm-12 m-t-sm">
-                                    <button id="clearButton" type="button" class="btn btn-default m-r-sm"
-                                            onClick="clearField()">Clear
-                                    </button>
-                                    <!--<button type="submit" class="btn btn-primary">Continue</button>-->
-                                    <a class="btn btn-primary dark-green" ui-sref="fe.createPassword">
-                                        Continue
-                                    </a>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
         </section>
-
-
+        <mhc-account-verification></mhc-account-verification>
     </div>
 </div>
