--- a/client/app/account/controllers/activationSuccess.html
+++ b/client/app/account/controllers/activationSuccess.html
@@ -1,5 +1,4 @@
 <div class="container-fluid page-bg-white">
-
     <nav class="navbar navbar-fixed-top height-60 gray-bg border-bottom" role="navigation">
         <div class="container-fluid">
             <div class="row ">
@@ -38,9 +37,9 @@
 
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10 m-t-md">
-                <button type="button" class="btn btn-primary dark-green" onClick="window.location.href='#'"
-                        style="margin: 0 10px 0 0;">Continue to Login Page
-                </button>
+                <a class="btn btn-primary dark-green" ui-sref="fe.login">
+                    Continue to Login Page
+                </a>
             </div>
         </div>
     </div>
