Create create password directive
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/controllers/createPassword.html
+++ b/client/app/account/controllers/createPassword.html
@@ -37,70 +37,7 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="col-sm-offset-1 col-sm-10">
-                    <form class="" id="createPassword" method="post">
-                        <fieldset class="">
-                            <legend class="sr-only">Create password</legend>
-
-                            <div class="form-group">
-                                <label class="control-label" for="user_name">Username</label>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <input id="user_name" name="username" type="text" aria-required="true"
-                                               class="form-control bold" placeholder="sallysharemhc@gmail.com"
-                                               readonly/>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group wrap">
-                                <label for="password">Password</label>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <input id="password" name="password" type="password" aria-required="true"
-                                               class="form-control"/>
-                                        <p class="text-alert m-t-xs m-b-xxs">Password is required.</p>
-                                        <p id="password_client_error_text" class="text-alert m-t-xs m-b-xxs"
-                                           style="display: none;">Password is required.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group wrap m-b">
-                                <label for="reenterPassword">Re-enter Password</label>
-                                <div class="row">
-                                    <div class="col-sm-6">
-                                        <input id="reenterPassword" name="password" type="password"
-                                               aria-required="true"
-                                               class="form-control"/>
-                                        <p class="text-alert m-t-xs m-b-xxs">Repeat password is required.</p>
-                                        <p id="password_client_error_text2" class="text-alert m-t-xs m-b-xxs"
-                                           style="display: none;">Repeat password is required.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <input type="hidden" name="token"/>
-                            <input type="hidden" name="verificationCode"/>
-                            <input type="hidden" name="birthDate"/>
-
-                            <div class="form-group m-t-md">
-                                <div class="col-sm-12">
-                                    <button type="button" class="btn btn-default m-r-sm"
-                                            onClick="window.location.href='#'">
-                                        Clear
-                                    </button>
-                                    <button type="button" class="btn btn-primary dark-green"
-                                            onClick="window.location.href='fe/activationSuccess'">
-                                        Submit
-                                    </button>
-                                </div>
-                            </div>
-                        </fieldset>
-                    </form>
-                </div>
-            </div>
+            <mhc-create-password></mhc-create-password>
         </section>
     </div>
 </div>
