--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -17,7 +17,7 @@
                         <div class="row">
                             <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                 <input id="verificationCode" name="verificationCode" type="text"
-                                       ng-model="verificationVm.verificationFormMaster.verificationCode"
+                                       ng-model="verificationVm.patient.verificationCode"
                                        class="form-control"/>
                             </div>
                         </div>
