--- a/client/app/account/controllers/activationSuccess.html
+++ b/client/app/account/controllers/activationSuccess.html
@@ -37,9 +37,9 @@
 
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10 m-t-md">
-                <a class="btn btn-primary dark-green" ui-sref="fe.login">
+                <button type="button" class="btn-primary dark-green" ng-click="activateVm.activated()">
                     Continue to Login Page
-                </a>
+                </button>
             </div>
         </div>
     </div>
