Add checking email token is valid while patient try to access activation
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/controllers/activationError.html
+++ b/client/app/account/controllers/activationError.html
@@ -30,16 +30,16 @@
             <div class="col-sm-offset-1 col-sm-10">
                 <h1> Account Activation Error!</h1>
                 <div class="">
-                    <strong>Invalid Token!</strong>
+                    <strong>Please contact with your provider</strong>
                 </div>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10 m-t-md">
-                <button type="button" class="btn btn-primary dark-green" onClick="window.location.href='fe/account/verification'"
-                        style="margin: 0 10px 0 0;">Back to Verification Page
-                </button>
+                <a class="btn btn-primary dark-green" ui-sref="fe.login">
+                    Back to Login Page
+                </a>
             </div>
         </div>
     </div>
