--- a/client/app/account/controllers/activationError.html
+++ b/client/app/account/controllers/activationError.html
@@ -28,9 +28,9 @@
 
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10">
-                <h1> Account Activation Error!</h1>
+                <h1> Sorry! Activation Code Expired! </h1>
                 <div class="">
-                    <strong>Please contact with your provider</strong>
+                    <strong>We're very sorry. This email link is no longer valid.</strong> Please contact your provider for a new Verification Code.
                 </div>
             </div>
         </div>
