Implement Account Setup Verification page
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -8,9 +8,11 @@
                     <label class="control-label" for="user_name">Username</label>
                     <div class="row">
                         <div class="col-sm-6">
-                            <input id="user_name" name="username" type="text" aria-required="true"
+                            <!--<input id="user_name" name="username" type="text" aria-required="true"
                                    class="form-control bold" placeholder="sallysharemhc@gmail.com"
-                                   readonly/>
+                                   readonly/>-->
+                            <div id="user_name" class="form-control bold"
+                                 ng-bind="createPasswordVm.userName" readonly></div>
                         </div>
                     </div>
                 </div>
