--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -9,7 +9,7 @@
                             <div class="col-xs-6 col-sm-4 col-md-4">
                                 <label for="month" class="sr-only">Month</label>
                                 <select id="month" class="form-control"
-                                        ng-model="verificationVm.month">
+                                        ng-model="verificationVm.verifyInfo.month">
                                     <option selected="selected" value="  ">Month</option>
                                     <option value="01">January</option>
                                     <option value="02">February</option>
@@ -28,7 +28,7 @@
 
                             <div class="col-xs-2 col-sm-4 col-md-4 side-padding0">
                                 <label for="day" class="sr-only">Day</label>
-                                <select id="day" class="form-control" ng-model="verificationVm.day">
+                                <select id="day" class="form-control" ng-model="verificationVm.verifyInfo.day">
                                     <option selected="selected" value="  ">Day</option>
                                     <option value="01">01</option>
                                     <option value="02">02</option>
@@ -67,9 +67,10 @@
                             <div class="col-xs-4 col-sm-4">
                                 <label for="year" class="sr-only">Year</label>
                                 <select id="year" class="form-control"
-                                        ng-model="verificationVm.year">
-                                    <option selected="selected">Year</option>
+                                        ng-model="verificationVm.verifyInfo.year">
+                                    <option selected="selected" value="  ">Year</option>
                                     <option value="2000">2000</option>
+                                    <option value="2001">2001</option>
                                 </select>
                             </div>
                         </div>
@@ -84,7 +85,7 @@
                         <div class="row">
                             <div class="col-xs-8 col-sm-5 col-md-4 col-lg-3 m-b-xs">
                                 <input id="verificationCode" name="verificationCode" type="text"
-                                       ng-model="verificationVm.verificationCode"
+                                       ng-model="verificationVm.verifyInfo.verificationCode"
                                        class="form-control"/>
                             </div>
                         </div>
