Additional content added to the Activation Error Page.
#8416 - As a patient, I can activate my account to login and access MHC [UI/API]

--- a/client/app/account/controllers/activationError.html
+++ b/client/app/account/controllers/activationError.html
@@ -6,7 +6,7 @@
                 <div class="col-sm-12">
                     <div class="navbar-header">
                         <div class="m-t-md m-l inline">
-                            <p>MHC Account Activation Error</p>
+                            <p>MHC Account Activation - Invalid</p>
                         </div>
                     </div>
                     <div class="pull-right">
@@ -29,14 +29,20 @@
         <div class="row">
             <div class="col-sm-offset-1 col-sm-10">
                 <h1> Sorry! Activation Code Expired! </h1>
-                <div class="">
-                    <strong>We're very sorry. This email link is no longer valid.</strong> Please contact your provider for a new Verification Code.
+                <p><strong>We're very sorry. This email link is no longer valid.</strong> Please contact your provider for a new Verification Code.</p>
+                <p class="m-t-md"><em>Contact Information:</em></p>
+                <div class="m-l">
+                    <h3 class="m-b-xs"><strong>Provider Name</strong></h3>
+                    <p class="m-b-xs">Address</p>
+                    <p class="m-b-xs">Phone Number</p>
+                    <p><a href="#">providerwebsite.com</a></p>
                 </div>
+                <p class="m-t-md">Please click the link below for more information about MyHealthCompass available on the MHC Login Page.</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-sm-offset-1 col-sm-10 m-t-md">
+            <div class="col-sm-offset-1 col-sm-10">
                 <a class="btn btn-primary dark-green" ui-sref="fe.login">
                     Back to Login Page
                 </a>
