--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -92,6 +92,12 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="verificationVm.verifyError">
+                        <span>Sorry, the Date of Birth and/or Verification Code entered does not match, please try again.</span>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="col-sm-12 m-t-sm">
                         <button type="button" class="btn btn-default m-r-sm"
