Implement Create your Password page
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -12,7 +12,7 @@
                                    class="form-control bold" placeholder="sallysharemhc@gmail.com"
                                    readonly/>-->
                             <div id="user_name" class="form-control bold"
-                                 ng-bind="createPasswordVm.userName" readonly></div>
+                                 ng-bind="createPasswordVm.username" readonly></div>
                         </div>
                     </div>
                 </div>
@@ -22,7 +22,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <input id="password" type="password" class="form-control" placeholder="Password" ng-minlength="2" ng-maxlength="30"
-                                   ng-model="createPasswordVm.account.password" name="password" required>
+                                   ng-model="createPasswordVm.patient.password" name="password" required>
                         </div>
                     </div>
                 </div>
@@ -31,14 +31,16 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <input id="reenterPassword" type="password" class="form-control" placeholder="Confirm password" ng-minlength="2" ng-maxlength="30"
-                                   ng-model="createPasswordVm.account.confirmPassword" name="confirmPassword" required>
+                                   ng-model="createPasswordVm.patient.confirmPassword" name="confirmPassword" required>
                         </div>
                     </div>
                 </div>
 
-               <!-- <input type="hidden" name="token"/>
-                <input type="hidden" name="verificationCode"/>
-                <input type="hidden" name="birthDate"/>-->
+                <div class="row">
+                    <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="createPasswordVm.activateError">
+                        <span>Whoops! Change message later.</span>
+                    </div>
+                </div>
 
                 <div class="form-group m-t-md">
                     <div class="col-sm-12">
@@ -46,7 +48,7 @@
                                 ng-click="createPasswordVm.clearField(createPasswordForm)">Clear
                         </button>
                         <button type="button" class="btn btn-primary dark-green"
-                                onClick="window.location.href='fe/activationSuccess'">
+                                ng-click="createPasswordVm.activate()">
                             Submit
                         </button>
                     </div>
