Show patient name in activation success page
#8416 - As a patient, I can activate my account to login and access MHC

--- a/client/app/account/controllers/activationSuccess.html
+++ b/client/app/account/controllers/activationSuccess.html
@@ -29,7 +29,10 @@
             <div class="col-sm-offset-1 col-sm-10">
                 <h1> Account Activation Complete!</h1>
                 <div class="">
-                    <strong>Congratulations!</strong> You have successfully created your MyHealthCompass password. Click
+                    <strong>Congratulations!
+                        <span ng-bind="activateVm.patientName"></span>
+                    </strong>
+                    You have successfully created your MyHealthCompass password. Click
                     on the link below to log in to your account.
                 </div>
             </div>
