--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -8,11 +8,9 @@
                     <label class="control-label" for="user_name">Username</label>
                     <div class="row">
                         <div class="col-sm-6">
-                            <!--<input id="user_name" name="username" type="text" aria-required="true"
+                            <input id="user_name" name="username" type="text" aria-required="true"
                                    class="form-control bold" placeholder="sallysharemhc@gmail.com"
-                                   readonly/>-->
-                            <div id="user_name" class="form-control bold"
-                                 ng-bind="createPasswordVm.username" readonly></div>
+                                   ng-model="createPasswordVm.username" readonly/>
                         </div>
                     </div>
                 </div>
