Minor html and stlye changes to the Login page.
#8416 - As a patient, I can activate my account to login and access MHC [UI/API]

--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -20,7 +20,7 @@
                             <div class="col-md-5 m-b-md">
                                 <h1 class="font-bold text-navbar-blue">Take control of your health and well-being with My Health Compass.</h1>
                                 <div class="m-t border-top-navbar-blue">
-                                    <h2 class="m-t-xs font-bold m-t text-navy-blue">No Account? Register Today!</h2>
+                                    <h2 class="m-t-xs font-bold m-t text-dark-blue">No Account? Register Today!</h2>
                                     <p> To register for My Health Compass, please contact your provider and ask about a My Health Compass Account.</p>
                                 </div>
                             </div>
