--- a/client/app/core/directives/datedropdowns.html
+++ b/client/app/core/directives/datedropdowns.html
@@ -1,76 +1,17 @@
 <div class="row">
-    <div class="col-xs-6 col-sm-5 col-md-4 col-lg-3">
-        <label for="month" class="sr-only">Month</label>
-        <select id="month" class="form-control"
-                ng-model="verificationVm.verifyInfo.month">
-            <option selected="selected" value="  ">Month</option>
-            <option value="01">January</option>
-            <option value="02">February</option>
-            <option value="03">March</option>
-            <option value="04">April</option>
-            <option value="05">May</option>
-            <option value="06">June</option>
-            <option value="07">July</option>
-            <option value="08">August</option>
-            <option value="09">September</option>
-            <option value="10">October</option>
-            <option value="11">November</option>
-            <option value="12">December</option>
+    <div class="col-xs-6 col-sm-4 col-md-1">
+        <select id="month" class="form-control" ng-model="dateDropdownsVm.dateFields.month" ng-options="m.value as m.name for m in months">
+            <option value="">Month</option>
         </select>
     </div>
-
-    <div class="col-xs-2 col-sm-5 col-md-4 side-padding0">
-        <label for="day" class="sr-only">Day</label>
-        <select id="day" class="form-control" ng-model="verificationVm.verifyInfo.day">
-            <option selected="selected" value="  ">Day</option>
-            <option value="01">01</option>
-            <option value="02">02</option>
-            <option value="03">03</option>
-            <option value="04">04</option>
-            <option value="05">05</option>
-            <option value="06">06</option>
-            <option value="07">07</option>
-            <option value="08">08</option>
-            <option value="09">09</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-            <option value="22">22</option>
-            <option value="23">23</option>
-            <option value="24">24</option>
-            <option value="25">25</option>
-            <option value="26">26</option>
-            <option value="27">27</option>
-            <option value="28">28</option>
-            <option value="29">29</option>
-            <option value="30">30</option>
-            <option value="31">31</option>
+    <div class="col-xs-6 col-sm-4 col-md-1">
+        <select id="day" class="form-control" ng-model="dateDropdownsVm.dateFields.day" ng-options="d for d in days">
+            <option value="">Day</option>
         </select>
     </div>
-
-    <div class="col-xs-4 col-sm-2">
-        <label for="year" class="sr-only">Year</label>
-        <select id="year" class="form-control"
-                ng-model="verificationVm.verifyInfo.year">
-            <option selected="selected" value="    ">Year</option>
-            <option value="2000">2000</option>
+    <div class="col-xs-6 col-sm-4 col-md-1">
+        <select id="year"  class="form-control" ng-model="dateDropdownsVm.dateFields.year" ng-options="y for y in years">
+            <option value="">Year</option>
         </select>
     </div>
-
-    <!--<div class="col-xs-12 m-t-sm">
-        <div ng-messages="createPatientForm.dateOfBirth.$error"
-             ng-if="createPatientForm.dateOfBirth.$dirty"
-             class="text-alert">
-            <div ng-messages-include="admin-messages"></div>
-        </div>
-    </div>-->
 </div>
