--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -1,4 +1,11 @@
 <div class="row">
+    <script type="text/ng-template" id="activation-messages">
+        <div ng-message="required">Please complete this required field.</div>
+        <div ng-message="minlength">The field should contain at least 2 characters, please try again.</div>
+        <div ng-message="maxlength">The field cannot contain more than 30 characters, please try again.</div>
+        <div ng-message="compareTo">Your password and confirm password must match, please try again.</div>
+    </script>
+
     <div class="col-sm-offset-1 col-sm-10">
         <form class="" name="createPasswordForm" method="post">
             <fieldset class="">
@@ -9,7 +16,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <input id="user_name" name="username" type="text" aria-required="true"
-                                   class="form-control bold" placeholder="sallysharemhc@gmail.com"
+                                   class="form-control bold" placeholder="username"
                                    ng-model="createPasswordVm.username" readonly/>
                         </div>
                     </div>
@@ -19,8 +26,13 @@
                     <label for="password">Password</label>
                     <div class="row">
                         <div class="col-sm-6">
-                            <input id="password" type="password" class="form-control" placeholder="Password" ng-minlength="2" ng-maxlength="30"
-                                   ng-model="createPasswordVm.patient.password" name="password" required>
+                            <input id="password" type="password" class="form-control" name="password"
+                                   placeholder="Password" ng-minlength="2" ng-maxlength="30"
+                                   ng-model="createPasswordVm.patient.password" required>
+                            <div ng-messages="createPasswordForm.password.$error"
+                                 ng-if="createPasswordForm.password.$dirty" class="text-alert">
+                                <div ng-messages-include="activation-messages"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -28,8 +40,14 @@
                     <label for="reenterPassword">Re-enter Password</label>
                     <div class="row">
                         <div class="col-sm-6">
-                            <input id="reenterPassword" type="password" class="form-control" placeholder="Confirm password" ng-minlength="2" ng-maxlength="30"
-                                   ng-model="createPasswordVm.patient.confirmPassword" name="confirmPassword" required>
+                            <input id="reenterPassword" type="password" class="form-control" name="confirmPassword"
+                                   placeholder="Confirm password" ng-minlength="2" ng-maxlength="30"
+                                   ng-model="createPasswordVm.patient.confirmPassword"
+                                   mhc-compare-to="createPasswordVm.patient.password" required>
+                            <div ng-messages="createPasswordForm.confirmPassword.$error"
+                                 ng-if="createPasswordForm.confirmPassword.$dirty" class="text-alert">
+                                <div ng-messages-include="activation-messages"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -46,7 +64,8 @@
                                 ng-click="createPasswordVm.clearField(createPasswordForm)">Clear
                         </button>
                         <button type="button" class="btn btn-primary dark-green"
-                                ng-click="createPasswordVm.activate()">
+                                ng-click="createPasswordVm.activate()"
+                                ng-disabled="!createPasswordVm.canActivate(createPasswordForm)">
                             Submit
                         </button>
                     </div>
